--- a/public/components/common/search/search.scss
+++ b/public/components/common/search/search.scss
@@ -20,6 +20,11 @@
   font-weight: bold;
 }
 
+#servicesEntities {
+  position: relative;
+  z-index: 0;
+}
+
 #autocomplete-textarea {
   width: 100%;
   outline: none;
@@ -30,9 +35,19 @@
   font-size: 16px;
   padding-right: 40px;
 }
+
 .aa-Panel {
   width: 100%;
   z-index: 2500;
+}
+
+.aa-Panel--scrollable-dark {
+  background-color: #1D1E24;
+  border: 2px groove #383444;
+}
+
+.aa-Item-dark {
+  color: #DFE5EF;
 }
 
 .event-date-picker {
